# Nucleo-H563ZI

./: .clang-format  .gitignore  .gitmodules  ADC_konzept  CMakeLists.txt  CMakePresets.json  README.md
CmakeBuild/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
Config/: CMakeLists.txt
Config/FreeRtosConfig/: FreeRTOSConfig.h
Libraries/: CMakeLists.txt
Linker/: STM32H563xx_FLASH.ld
Source/: adc_channel.hpp  adc_polling_config.hpp  adc_test.hpp  interface_adc_channel.hpp  interface_adc_config.hpp  interface_adc_driver.hpp  interface_sensor.hpp  main.cpp  mcu_temp_sensor.hpp  system_clock_configuration.cpp  system_clock_configuration.hpp  task1.hpp  task2.hpp  thermistor_sensor.hpp
Source/Application/: adc_channel.hpp  adc_polling_config.hpp  interface_adc_config.hpp  mcu_temp_sensor.hpp  thermistor_sensor.hpp
Source/Example/: adc.hpp  adc_only.hpp
Source/NotUsed/: adc_dma.hpp
Source/Tasks/: task2.hpp
Toolchain/: toolchain_gcc-arm.cmake  toolchain_iar-arm.cmake
Util/: interpolate.hpp
